1.7.1.RELEASE/ja/_sources/Introduction/ChangeLog.rst.txt
更新履歴
================================================================================

.. tabularcolumns:: |p{0.15\linewidth}|p{0.25\linewidth}|p{0.60\linewidth}|
.. list-table::
    :header-rows: 1
    :widths: 15 25 60
    :class: longtable

    * - 更新日付
      - 更新箇所
      - 更新内容

    * - 2021-01-07
      - \-
      - 1.7.1 RELEASE版公開

    * -
      - :doc:`../ImplementationAtEachLayer/ApplicationLayer`
      - 記載内容の修正

        * プリプロセッシングの実装例において、本来プリプロセッシングが不要な実装を実装例としていたため修正

    * -
      - :doc:`../ArchitectureInDetail/WebApplicationDetail/Thymeleaf`
      - 記載内容の修正

        * SpEL評価時におけるnull-safetyの影響についての実装例において、本来プリプロセッシングが不要な実装でプリプロセッシングを使用していたため修正

    * -
      - :doc:`../ArchitectureInDetail/WebApplicationDetail/SessionManagement`
      - 記載内容の追加

        * 「同一セッション内のリクエストの同期化」の適用範囲についての注意事項を追加

    * -
      - :doc:`../ArchitectureInDetail/WebApplicationDetail/Codelist`
      - 記載内容の修正

        * テンプレートHTMLの実装例において、本来プリプロセッシングが不要な実装でプリプロセッシングを使用していたため修正

    * -
      - :doc:`../ArchitectureInDetail/WebApplicationDetail/TemplateLayout`
      - 記載内容の修正

        * テンプレートHTMLの実装例において、本来プリプロセッシングが不要な実装でプリプロセッシングを使用していたため修正

    * - 2020-06-29
      - \-
      - 1.7.0 RELEASE版公開

    * -
      - 全般
      - ガイドラインの誤記(タイプミスや単純な記述ミスなど)の修正

        記載内容の改善

        記載内容の修正・追加

        * 利用するミドルウェアのバージョンを更新

        * Spring Framework 5.1.16より\ `XMLスキーマ処理が改善 <https://github.com/spring-projects/spring-framework/issues/22504>`_\されたため、ブランクプロジェクトにおけるBean定義ファイルのXMLスキーマファイル(.xsd)参照を\ ``http``\から\ ``https``\に変更
        * Spring Framework 5.1より\ `ログ出力の見直し <https://github.com/spring-projects/spring-framework/issues/21437>`_\が行われたため、ブランクプロジェクトにおいてマッピングされたハンドラメソッドのログを出力するよう変更

    * -
      - :doc:`../Introduction/CriteriaBasedMapping`
      - 記載内容の追加

        * CVE-2020-5408を追加

    * -
      - :doc:`../Overview/FrameworkStack`
      - 利用するOSSのバージョンを更新

        * Spring Bootを2.2.4に更新
        * Spring Security OAuthを2.4.0に更新
        * MyBatisを3.5.3に更新
        * MyBatis Springを2.0.3に更新
        * Apache Commons BeanUtilsを1.9.4に更新
        * Dozerを6.5.0に更新
        * Apache POIを4.1.1に更新

        Spring Boot のバージョン更新に伴い利用するOSSのバージョンを更新

        * Spring Frameworkを5.2.3に更新
        * Spring Dataを2.2.4に更新
        * Spring Securityを5.2.1に更新
        * AspectJを1.9.5に更新
        * SLF4Jを1.7.30に更新
        * Jacksonを2.10.2に更新
        * thymeleaf-extras-java8time を3.0.4に更新
        * Hibernate Validatorを6.0.18(Bean Validation 2.0)に更新
        * Apache Commons Langを3.9に更新
        * Joda Timeを2.10.5に更新
        * Apache Commons DBCPを2.7.0に更新
        * Apache HttpClientを4.5.10に更新
        * Lombokを1.18.10に更新

        単体テストで利用するOSSのバージョンを更新

        * Hamcrestを2.1に更新
        * Mockitoを3.1.0に更新
        * Spring Testを5.2.3に更新

        利用するOSSのバージョンの更新による主な変更

        * Spring Security 5.2で追加された\ ``Argon2PasswordEncoder``\の記述を追加
        * Spring Security 5.2で追加された\ ``LogoutSuccessEvent``\および\ ``LogoutSuccessEventPublishingLogoutHandler``\の記述を追加
        * Spring Security 5.2で追加された\ ``ClearSiteDataHeaderWriter``\および\ ``HeaderWriterLogoutHandler``\の記述を追加
        * Spring Security 5.2.1において、既存のセキュリティヘッダがある場合の挙動が変更されたこと（\ `spring-projects/spring-security#6454 <https://github.com/spring-projects/spring-security/issues/6454>`_\）への対応
        * Spring Data 2.2において、廃止予定であった非推奨APIが削除されたことへの対応
        * Spring Boot 2.2.0からJavaMailがJakarta Mailにバージョンアップしたことへの対応
        * Hamcrest 2.1からHamcrestのモジュールが統合されたため、記載するOSSライブラリを変更

        利用するOSSのサポートを終了

        * JDBC 4.2に対応していないLog4JDBCをサポート対象外として削除

        共通ライブラリの機能改善

        * 共通ライブラリが用意する入力チェックルールのデフォルトエラーメッセージを共通ライブラリで提供
        * \ ``Argon2PasswordEncoder``\のサポートに伴い、\ ``bcprov-jdk15on``\への依存関係を共通ライブラリで管理

        記載内容の追加

        * 共通ライブラリの構成要素に、TERASOLUNA Server Framework のバージョンについてのNoteを追加

    * -
      - :doc:`../ImplementationAtEachLayer/ApplicationLayer`
      - 記載内容の追加

        * \ ``@RequestMapping``\ の値（value属性）を省略した場合の動作についてのNoteを追加
        * パス設計時の注意点についてのWarningを追加

    * -
      - :doc:`../ArchitectureInDetail/WebApplicationDetail/Validation`
      - 記載内容の追加

        * 日付時刻の検証（\ ``@Past``\、\ ``@Future``\、\ ``@PastOrPresent``\、\ ``@FutureOrPresent``\）に適切な型を使用する必要があることについてのWarningを追加

        記載内容の修正

        * 共通ライブラリが用意する入力チェックルールのデフォルトエラーメッセージを共通ライブラリで提供するように変更したことに伴う記載内容の変更

    * -
      - :doc:`../ArchitectureInDetail/WebApplicationDetail/Pagination`
      - Spring Data 2.2対応に伴う修正

        * Spring Data 2.2において、廃止予定であった非推奨APIが削除されたことに伴う実装例の修正

    * -
      - :doc:`../ArchitectureInDetail/WebApplicationDetail/Internationalization`
      - 記載内容の修正

        * \ ``LocaleChangeInterceptor``\の仕様についてのNoteを修正

    * -
      - :doc:`../ArchitectureInDetail/WebApplicationDetail/Codelist`
      - 記載内容の修正

        * \ ``@ExistInCodeList``\の入力チェックエラーメッセージについての記述を\ :doc:`../ArchitectureInDetail/WebApplicationDetail/Validation`\に統合

    * -
      - :doc:`../ArchitectureInDetail/WebServiceDetail/RestClient`
      - 記載内容の修正

        * \ ``AsyncRestTemplate``\のスレッドプールをカスタマイズする方法の誤った説明を修正

    * -
      - :doc:`../ArchitectureInDetail/DataAccessDetail/DataAccessCommon`
      - 記載内容の削除

        *  共通ライブラリの変更に伴うlog4jdbcの記載の削除

    * -
      - :doc:`../ArchitectureInDetail/GeneralFuncDetail/Dozer`
      - 記載内容の削除

        * Dozer 6.5.0よりJSR-310 Date and Time APIで使用できるはずのパターン文字が使用できない不具合が解消されたため、不具合を記述したWarningを削除

        記載内容の追加

        * javax.el標準APIの実装ライブラリが存在しないことにより発生する警告についての説明を追加

        記載内容の修正

        * Dozer 6.5.0より、Mavenを利用してJava SE 9以降でビルドする場合JAXBを利用するための設定が不要になったため、WarningをNoteに変更し説明を修正

    * - 
      - :doc:`../ArchitectureInDetail/MessagingDetail/Email`
      - Spring Boot 2.2.4対応に伴う修正

        * JavaMailからJakarta Mailにバージョンアップしたことに伴い、説明内容を修正

        記載内容の修正

        * JavaMail 1.4.4よりマルチバイト文字を使用する際にメール本文終端に余計な文字が付与される不具合が修正された旨を追記

    * -
      - :doc:`../ArchitectureInDetail/MessagingDetail/JMS`
      - 記載内容の修正・追加

        * Spring Framework 5.0.0より、Spring JMSの動作にJMS 2.0のAPIが必要になったことによる記載の修正
        * ActiveMQ Clientにおいて、JMS API 2.0で動作するために必要なライブラリ一覧を追加
        * リスナークラスを格納するパッケージ配下をcomponent-scan対象とする必要がある旨の説明を追加

    * -
      - :doc:`../Security/SpringSecurity`
      - 記載内容の修正

        * Spring Security 5.0.1, 4.2.4, 4.1.5より、デフォルトで利用される\ ``HttpFirewall``\ インタフェースの実装クラスが変更されたことに対する記述の修正

    * -
      - :doc:`../Security/Authentication`
      - Spring Security 5.2.x対応に伴う修正

        * Spring Security 5.2で追加された\ ``Argon2PasswordEncoder``\の記述を追加
        * Spring Security 5.2で追加された\ ``LogoutSuccessEvent``\および\ ``LogoutSuccessEventPublishingLogoutHandler``\の記述を追加
        * Spring Security 5.2で追加された\ ``ClearSiteDataHeaderWriter``\および\ ``HeaderWriterLogoutHandler``\の記述を追加

        共通ライブラリの機能改善

        * \ ``Argon2PasswordEncoder``\のサポートに伴い、\ ``bcprov-jdk15on``\への依存関係を共通ライブラリで管理

        記載内容の追加

        * PasswordEncoderに定義されているメソッドの一覧にSpring Security 5.1で追加された\ ``upgradeEncoding``\を追加

        記載内容の修正

        * \ ``@EventListener``\ が処理する認証イベントの指定方法を改善
        * \ ``@EventListener``\ クラスを格納するパッケージの明示および注意点の記載
        * Spring Securityが提供するクラスをまとめた表の見直し

    * -
      - :doc:`../Security/Authorization`
      - 記載内容の修正

        * Spring Securityが提供するクラスをまとめた表の見直し

    * -
      - :doc:`../Security/SessionManagement`
      - 記載内容の修正

        * Spring Security 5.0.1, 4.2.4, 4.1.5以降では、デフォルトの設定でURL RewritingによるセッションIDの連携を行えず、設定を変更した場合、脆弱性が発生する可能性がある旨の記述を追加

    * -
      - :doc:`../Security/LinkageWithBrowser`
      - Spring Security 5.2.x対応に伴う修正

        * Spring Security 5.2で追加された\ ``ClearSiteDataHeaderWriter``\の記述を追加
        * Spring Security 5.2で追加されたStrict-Transport-SecurityヘッダのpreloadディレクティブについてのNoteを追加
        * \ `spring-projects/spring-security#6454 <https://github.com/spring-projects/spring-security/issues/6454>`_\により解消されたWarning「個別に付与したセキュリティヘッダがSpring Securityにより上書き（追加）される問題」を削除

        記載内容の追加

        * Content Security Policyヘッダに関するIEがサポートしていないことについてのWarningを追加
        * Content Security Policyヘッダで混在コンテンツをブロックする方法についてのNoteを追加

    * -
      - :doc:`../Security/Encryption`
      - 記載内容の修正

        * CVE-2020-5408により\ ``Encryptors#queryableText``\ メソッドを非推奨とする旨のNoteを追加し、コード例を削除

    * -
      - :doc:`../Security/SecureLoginDemo`
      - 記載内容の修正

        * \ ``@EventListener``\ が処理する認証イベントの指定方法を改善
        * \ ``@EventListener``\ クラスを格納するパッケージの変更

    * -
      - :doc:`../UnitTest/UnitTestOverview`
      - Spring Boot のバージョン更新に伴い利用するOSSのバージョンを更新

        * Hamcrestを2.1に更新
        * Mockitoを3.1.0に更新
        * Spring Testを5.2.3に更新

        記載内容の修正

        * Hamcrest 2.1から\ ``hamcrest-core``\, \ ``hamcrest-library``\が\ ``hamcrest``\に統合されたため、記載するOSSライブラリを変更

    * -
      - :doc:`../UnitTest/ImplementsOfUnitTest/ImplementsOfTestByLayer`
      - 記載内容の追加

        * データ定義ファイルにExcel形式（.xlsx）のファイルを使用する場合のApache POIについてWarningを追加

    * -
      - :doc:`../Appendix/Java11Changes`
      - 記載内容の追加

        * 「推移的に解決されるJava EE関連モジュールの競合」節の追加

    * - 2019-03-26
      - \-
      - 1.6.1 RELEASE版公開

    * -
      - 全般
      - Java SE 8および11のサポートに伴う修正

        * サポート対象外となるJava SE 7を利用する際の記述を削除
        * サポート対象となるJava SE 11を利用する際の記述を追加

        ガイドラインの誤記(タイプミスや単純な記述ミスなど)の修正

        記載内容の改善

        記載内容の修正・追加

        * ViewResolverの定義について、Spring 4.0以前からの\ ``<bean>``\要素を使用した定義方法を削除し、Spring 4.1以降の\ ``<mvc:view-resolvers>``\要素を使用した定義方法のみ解説するよう変更
        * 利用するミドルウェアのバージョンを更新

    * -
      - Thymeleaf対応
      - 以下のThymeleaf対応章を追加

        * :doc:`../ArchitectureInDetail/WebApplicationDetail/Pagination`
        * :doc:`../ArchitectureInDetail/WebApplicationDetail/Internationalization`
        * :doc:`../ArchitectureInDetail/WebApplicationDetail/Codelist`
        * :doc:`../ArchitectureInDetail/WebApplicationDetail/FileUpload`
        * :doc:`../ArchitectureInDetail/WebApplicationDetail/FileDownload`
        * :doc:`../ArchitectureInDetail/WebApplicationDetail/Ajax`
        * :doc:`../ArchitectureInDetail/WebApplicationDetail/HealthCheck`
        * :doc:`../ArchitectureInDetail/GeneralFuncDetail/DateAndTime`
        * :doc:`../ArchitectureInDetail/GeneralFuncDetail/JodaTime`
        * :doc:`../Security/OAuth`
        * :doc:`../Security/SecureLoginDemo`
        * :doc:`../Tutorial/TutorialTodo`
        * :doc:`../Tutorial/TutorialREST`
        * :doc:`../Tutorial/TutorialSession`
        * :doc:`../Tutorial/TutorialSecurity`

        記載内容の修正・追加

        * Decoupled Template Logicの適用方法についての記述を追加
        * JavaScriptのテンプレート化についての記述を追加
        * テンプレートHTMLのデバッグについての記述を追加
        * フレームワークスタックに\ ``thymeleaf-extras-java8time``\を追加

    * -
      - :doc:`../Introduction/CriteriaBasedMapping`
      - OWASP Top 10 を2013版から2017版へ変更

        * OWASP(Open Web Application Security Project)による観点の更新

    * -
      - :doc:`../Overview/FrameworkStack`
      - 利用するOSSの管理方法の変更

        * 利用するライブラリの管理にSpring Bootを利用するよう変更

        利用するOSSのバージョンを更新

        * Spring Boot 2.1.2の適用

         * Spring Frameworkのバージョンを5.1.4に更新
         * Spring Securityのバージョンを5.1.3に更新
         * Spring Dataのバージョンを2.1.4に更新
         * thymeleafのバージョンを3.0.11に更新
         * thymeleaf-spring4に代わりthymeleaf-spring5 3.0.11を追加
         * thymeleaf-extras-springsecurity4に代わりthymeleaf-extras-springsecurity5 3.0.4を追加
         * thymeleaf-extras-java8time 3.0.2を追加
         * Hibernate Validatorのバージョンを6.0.14(Bean Validation 2.0)に更新
         * Joda Timeのバージョンを2.10.1に更新
         * Jacksonのバージョンを2.9.8に更新
         * Apache HttpClientを4.5.6に更新
         * Lombokを1.18.4に更新

        * Spring Security OAuthを2.2.4に更新
        * MyBatisのバージョンを3.5.0に更新
        * MyBatis Springのバージョンを2.0.0に更新
        * Dozerのバージョンを6.4.1に更新
        * Apache POIを3.17に更新
        * iTextが非サポートになったため、OpenPDF 1.0.5を追加

        利用するOSSのバージョンの更新による主な変更

        * Spring Framework 5.0.0よりJasperReportsが非サポートとなったことへの対応
        * Spring Framework 5.0.3よりiTextが非サポートとなり、代わりにOpenPDFがサポートされたことへの対応
        * Spring Framework 4.2から非推奨ととなっていた\ ``AbstractExcelView``\がSpring Framework 5.0で削除されたことに伴う対応
        * Spring Framework 5.0.0よりクエリ文字列に対するURLエンコーディングの仕様が変更されたことへの対応
        * Spring Framework 5.0.0より指定サイズを超えるファイルのアップロードやマルチパートのリクエストが行われた際に発生する例外の仕様が変更されたことに伴う対応
        * Spring Framework 5.0.0よりSpEL評価時におけるnull-safety機能が追加されたことへの対応
        * Spring Security 5より非推奨の\ ``PasswordEncoder``\のパッケージが廃止になったことへの対応
        * Spring Security 5.0.2および5.1.2で変更となったセキュリティヘッダの付与タイミングによる、リクエストパスのマッチングにおける注意事項の追加
        * Spring Security OAuth 2.2.2よりリダイレクトURIのホワイトリストチェックの仕様が変更されたことへの対応
        * Thymeleaf 3.0.10よりイベントハンドラの式がJavaScriptテンプレートモードで解釈されるようになったことに対する対応
        * Thymeleaf 3.0.10よりイベントハンドラで従来の記法におけるXSS対策が強化されたことに対する対応

    * -
      - :doc:`../Overview/FrameworkStack`
      - TERASOLUNA Server Framework for Java (5.x)の共通ライブラリの新機能追加

        \ ``terasoluna-gfw-validator``\
         * バイト長チェック用Bean Validation制約アノテーション \ ``@ByteSize`` \ 

        TERASOLUNA Server Framework for Java (5.x)の共通ライブラリの機能改善

        \ ``terasoluna-gfw-common``\
         * \ ``SimpleI18nCodeList``\のロケール解決方法の改善
         * \ ``SimpleReloadableI18nCodeList``\の追加
         * \ ``@ExistInCodeList`` \ で \ ``Number`` \ 型をサポートするよう改善
         * \ ``ReloadableCodeList`` \ のイミュータブル対応に伴う \ ``CodeListInterceptor``\ の仕様変更
         * \ ``@ExistInCodeList`` \ をBean Validation 2.0に準拠するよう仕様変更
        \ ``terasoluna-gfw-codepoints``\
         * \ ``@ConsistOf`` \ をBean Validation 2.0に準拠するよう仕様変更
        \ ``terasoluna-gfw-validator``\
         * \ ``@ByteMax`` \ 及び\ ``@ByteMin`` \ をBean Validation 2.0に準拠するよう仕様変更

    * -
      - :doc:`../ImplementationAtEachLayer/ApplicationLayer`
      - 記載内容の追加

        * Spring Framework 4.3より追加された \ ``@RequestMapping``\ の合成アノテーションの説明を追加
        * Thymeleafのプリプロセッシングについて、解決された値により自動的に型が判定されることについての注意事項を追加

    * -
      - :doc:`../ImplementationAtEachLayer/CreateWebApplicationProject`
      - 記載内容の追加

        * 大量にコードリストを定義する場合のBean定義方法に関する記載を追加

    * -
      - :doc:`../ArchitectureInDetail/WebApplicationDetail/Thymeleaf`
      - Spring Framework 5.1.4対応に伴う修正

        * SpEL評価時におけるnull-safetyの影響についての注意事項を追加
      
    * -
      - :doc:`../ArchitectureInDetail/WebApplicationDetail/Validation`
      - Bean Validation 2.0(Hibernate Validator 6.0)対応に伴う修正

        * Bean Validation 2.0及びHibernate Validator 6.0では、コレクション内の各値に対して入力チェックできるようになった旨の説明を追加
        * Bean Validation 2.0では、一つのフィールドに同じアノテーションを複数指定できる旨の説明を追加
        * Bean Validation 2.0及びHibernate Validator 6.0で追加されたアノテーションに対する説明を追加
        * Hibernate Validator 6.0で非推奨となったアノテーションに対する説明を追加
        * Bean Validation 2.0で提供される\ ``ClockProvider``\を実装することで、基準日付の変更が可能である旨の説明を追加

    * -
      - :doc:`../ArchitectureInDetail/WebApplicationDetail/ExceptionHandling`
      - Spring Framework 5.1.4対応に伴う修正

        * \ ``DefaultHandlerExceptionResolver``\がハンドリングする例外一覧からSpring Framework 5.0より廃止された\ ``org.springframework.web.servlet.mvc.multiaction.NoSuchRequestHandlingMethodException``\を削除

        記載内容の修正

        * \ ``DefaultHandlerExceptionResolver``\がハンドリングする例外一覧にSpring Framework 4.2より追加された\ ``org.springframework.web.bind.MissingPathVariableException``\を追加
        * \ ``SystemExceptionResolver#preventResponseCaching``\とSpring SecurityのCache-Controlヘッダの併用についての注意を追加

    * -
      - :doc:`../ArchitectureInDetail/WebApplicationDetail/Pagination`
      - 構成見直し

        * Overviewを取得データの表示、ページネーションリンクの表示、ページネーション情報の表示の3点について説明するように変更

    * -
      - :doc:`../ArchitectureInDetail/WebApplicationDetail/MessageManagement`
      - 記載内容の修正

        * \ ``SPRING_SECURITY_LAST_EXCEPTION`` \ が格納されるスコープの誤記を修正

    * -
      - :doc:`../ArchitectureInDetail/WebApplicationDetail/Internationalization`
      - 記載内容の追加

        * \ ``AcceptHeaderLocaleResolver``\と\ ``LocaleChangeInterceptor``\の指定可能な設定についての説明を追加

    * -
      - :doc:`../ArchitectureInDetail/WebApplicationDetail/Codelist`
      - 記載内容の修正

        * 独自カスタマイズしたコードリストのBean定義方法を、コンポーネントスキャンからBean定義ファイルによる定義に変更

    * -
      - :doc:`../ArchitectureInDetail/WebApplicationDetail/FileUpload`
      - Spring Framework 5.1.4対応に伴う修正

        * 指定サイズを超えるファイルのアップロードやマルチパートのリクエストが行われた際に発生する例外の仕様が変更されたことに伴い、Noteを追加

    * -
      - :doc:`../ArchitectureInDetail/WebApplicationDetail/FileDownload`
      - Spring Framework 5.1.4対応に伴う修正

        * JasperReportsが非サポートとなったため、JasperReportsに言及している記載を修正
        * iTextの代わりにOpenPDFがサポートされるようになった旨の説明を追加し、実装例を修正
        * Spring Framework 4.2から非推奨ととなっていた\ ``AbstractExcelView``\がSpring Framework 5.0で削除されたことに伴う対応

    * -
      - | :doc:`../ArchitectureInDetail/WebApplicationDetail/Ajax`
      - OWASP Top 10 2017対応に伴う修正

        * A8:2017に関連する、デシリアライズ時のWarningを追加
        * Macchinetta Server Framework (1.x)ではXXE対策済みのSpring MVCを使用しているため、
          XXE対策についてのWarningをNoteへ変更し、spring-oxmによる対策方法の記述を削除

    * -
      - | :doc:`../ArchitectureInDetail/WebServiceDetail/REST`
      - OWASP Top 10 2017対応に伴う修正

        * Macchinetta Server Framework (1.x)ではXXE対策済みのSpring MVCを使用しているため、
          XXE対策についてのWarningをNoteへ変更し、spring-oxmによる対策方法の記述を削除

        記載内容の追加

        * Spring Framework 4.3より追加された \ ``@RequestMapping``\ の合成アノテーションの説明を追加

        記述内容の修正

        * Dozerのカスタムコンバーターに関する記述を\ :doc:`../ArchitectureInDetail/GeneralFuncDetail/Dozer`\に統合

    * -
      - :doc:`../ArchitectureInDetail/WebServiceDetail/RestClient`
      - Spring Framework 5.1.4対応に伴う修正

        * \ ``AsyncRestTemplate``\がSpring Framework 5より非推奨となった旨と、代替となるクラスが非サポートであることの説明を追加

    * -
      - :doc:`../ArchitectureInDetail/DataAccessDetail/DataAccessMyBatis3`
      - 記載内容の追加

        * \ ``Pageable`` \ を利用した検索結果のソートについての説明を追加
        * JSR-310 Date and Time APIを使う場合の設定の記事を削除し、依存ライブラリとして別途\ ``mybatis-typehandlers-jsr310`` \を追加する必要はなくなった旨のNoteを追加

    * -
      - :doc:`../ArchitectureInDetail/GeneralFuncDetail/Logging`
      - 記載内容の修正

        * TERASOLUNA Server Framework for Java (5.x)の共通ライブラリが提供する\ ``TraceLoggingInterceptor``\のWARNログ出力に関する閾値の設定例を修正

    * -
      - :doc:`../ArchitectureInDetail/GeneralFuncDetail/Dozer`
      - Dozer 6.4.1対応に伴う修正

        * Dozer のバージョンアップ対応に伴い、ガイドラインに記載されているコード例を修正
        * Dozer 6.2.0において、単方向マッピングの挙動が仕様と異なっていたバグが修正されたことの説明を追加
        * Dozer 6.3.0よりJAXBがデフォルト利用されるようになったため、挙動の変更の注意点をWARNINGに追加
        * Dozer 6.4.0より一部のJSR-310 Date and Time APIがサポートされた旨の説明を追加

        記載内容の削除

        * 現バージョン（Dozer5.5.0以降）ではCollection<T>を使用したBean間のマッピングも可能であるため、マッピングが失敗する旨を記述したTodoを削除

    * -
      - :doc:`../ArchitectureInDetail/MessagingDetail/JMS`
      - OWASP Top 10 2017対応に伴う修正

        * A8:2017に関連する、デシリアライズ時のWarningを追加

        記載内容の修正・追加

        * JMSを利用する際のBean定義の記載場所を再整理
        * JNDIを使用しない場合の\ ``DynamicDestinationResolver``\ のBean定義方法に関する記載を追加

    * -
      - :doc:`../Security/Authentication`
      - OWASP Top 10 2017対応に伴う修正

        * A10:2017に関連する、ログイン認証時のログについてのTipを追加

        記載内容の修正

        * Spring Security 5より非推奨の\ ``PasswordEncoder``\のパッケージが廃止されたことに伴い、\ ``MessageDigestPasswordEncoder``\を使用する方法に記載を修正

        記載内容の改善

        * ブランクプロジェクトで定義する\ ``PasswordEncoder``\を\ ``BCryptPasswordEncoder``\から\ ``DelegatingPasswordEncoder``\に変更したことに伴う記載内容の変更

        記載内容の追加

        * \ ``SPRING_SECURITY_LAST_EXCEPTION`` \ が格納されるスコープの説明を追加

    * -
      - :doc:`../Security/Authorization`
      - Spring Framework 5.1.4対応に伴う修正

        * SpEL評価時におけるnull-safetyの影響についての注意事項を追加

        記載内容の追加

        * Spring Securityが提供する\ ``AccessDeniedHandler``\の実装クラスの一覧に\ ``RequestMatcherDelegatingAccessDeniedHandler``\を追加

    * -
      - :doc:`../Security/CSRF`
      - OWASP Top 10 2017対応に伴う修正

        * OWASP Top 10 2013版へのリンクをOWASP Cheat Sheetへのリンクへ変更

    * -
      - :doc:`../Security/XSS`
      - Thymeleaf 3.0.11対応に伴う修正

        * イベントハンドラの式がJavaScriptテンプレートモードで解釈されるようになったことに対する記載内容及びコード例の変更
        * イベントハンドラで従来の記法におけるXSS対策が強化され、NumberとBoolean以外を出力する式が使用できなくなったことに対するWarningを追加

    * -
      - :doc:`../Security/LinkageWithBrowser`
      - Spring Security 5.1.3対応に伴う修正

        * Spring Securityが提供する\ ``HeaderWriterFilter``\の仕様変更と\ ``DelegatingRequestMatcherHeaderWriter``\でのリクエストパスのマッチングにおけるバグについての注意事項を追加

        記載内容の追加

        * Spring Securityがサポートするセキュリティヘッダの一覧にReferrer-Policyヘッダを追加
        * Spring Securityがサポートするセキュリティヘッダの一覧にFeature-Policyヘッダを追加

    * -
      - :doc:`../Security/OAuth`
      - Spring Security OAuth 2.2.2対応に伴う修正

        * Spring Security OAuthのバージョン更新に伴いリダイレクトURI情報を保持するテーブルへの説明にWarningを追加

        記載内容の修正

        * \ ``alias``\属性を用いた\ ``authentication-manager``\の定義に関する実装例、説明の修正

        記載内容の追加

        * \ `CVE-2019-3778 <https://pivotal.io/security/cve-2019-3778>`_\ (オープンリダイレクト脆弱性)に関する注意喚起を追加

    * -
      - :doc:`../Tutorial/TutorialTodo`
      - 記載内容の修正・追加

        * 一覧表示機能作成時に、登録機能の一部を作成していた部分を変更し、一覧表示機能の動作確認できるように、コード例を追加
        * ガイドライン修正に伴う、サンプルコードの最新化

    * -
      - :doc:`../Tutorial/TutorialREST`
      - 記載内容の修正

        * spring-mvc-rest.xmlを作成する方法の説明を変更
        * ガイドライン修正に伴う、サンプルコードの最新化

    * -
      - :doc:`../Tutorial/TutorialSession`
      - 記載内容の修正

        * ガイドライン修正に伴う、サンプルコードの最新化

    * -
      - :doc:`../Tutorial/TutorialSecurity`
      - 記載内容の修正

        * \ ``SPRING_SECURITY_LAST_EXCEPTION`` \ が格納されるスコープの誤記を修正
        * ガイドライン修正に伴う、サンプルコードの最新化

    * -
      - :doc:`../Appendix/Java11Changes`
      - 新規追加

        * Java SE 8からJava SE 11までの主要な変更点を追加

    * - 2018-03-09
      - \-
      - 1.5.1 RELEASE版公開

    * - 
      - :doc:`../Overview/FrameworkStack`
      - CVE-2018-1199への対応のため、利用するOSSのバージョンを更新

        * Spring Frameworkのバージョンを4.3.14に更新
        * Spring Securityのバージョンを4.2.4に更新

    * -
      - :doc:`../Security/OAuth`
      - 記載内容の修正

        * 認可サーバのチェックトークンエンドポイントのURL設定が反映されない不具合へのWarningを削除

    * - 2017-12-22
      - \-
      - 1.5.0 RELEASE版公開

.. raw:: latex

   \newpage
